--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@iconify/react": "^5.2.0",
@@ -19,11 +20,13 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@types/node": "^22.10.1",
     "axios": "^1.7.9",
-    "framer-motion": "^11.18.1",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.18.2",
     "mdb": "^0.1.0",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
