--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.2.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.1.5",
