fix: netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,15 @@
 [build]
-  publish = "frontend/dist"       
-  functions = "backend/src/services"  
+  publish = "frontend/dist"
+  functions = "backend/src/services"
 
 [[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
   status = 200
   force = true
